# picograd

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: demo.py  train_mlp.ipynb
picograd/: __init__.py  engine.py  nn.py
tests/: test_engine.py  test_nn.py
zgrad/: engine.py
